<resources>
    <string name="app_name">Mockingbird</string>
    <string name="play_label">Play</string>
    <string name="pause_label">Pause</string>
    <string name="select_label">Select a Playlist:</string>
    <string name="choose_label">Playlists</string>
    <string name="search_label">Search</string>
    <string name="settings_label">Settings</string>
    <string name="create_label">Create Playlist</string>
    <string name="start_label">Start Playlist</string>
    <string name="edit_label">Edit Playlist</string>
    <string name="add_to_playlist_label">Add to Playlist</string>
    <string name="rename_label">Rename</string>
    <string name="add_song_from_downloads_label">Add Song from Downloads</string>
    <string name="add_song_from_xenocanto_label">Add Song from Xeno-Canto</string>
    <string name="delete_label">Delete</string>
    <string name="ok">OK</string>
    <string name="no_permission_title">Nothing to do...</string>
    <string name="no_permission_message">Without accessing external storage, no songs can be played.</string>
    <string name="delete_playlist_message">Are you sure you want to delete the playlist?</string>
    <string name="delete_song_message">Are you sure you want to delete the song?</string>
    <string name="say_answer_setting">Say Answers</string>
    <string name="say_answer_setting_summary">Use TextToSpeech to say answers</string>
    <string name="use_birdcodes_setting">Use Bird Banding Codes</string>
    <string name="use_birdcodes_setting_summary">Use four letter bird banding codes instead of names </string>
    <string name="xenocanto_quality_setting">Xeno-Canto Recording Quality</string>
    <string name="xenocanto_quality_summary">Restrict Xeno-Canto recordings to this quality or better</string>
    <string name="in_a_row">%1$d in a row</string>
</resources>
