<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_say_answers"
        android:title="@string/say_answer_setting"
        android:summary="@string/say_answer_setting_summary"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="pref_use_birdcodes"
        android:title="@string/use_birdcodes_setting"
        android:summary="@string/use_birdcodes_setting_summary"
        android:defaultValue="false" />
    <ListPreference
        android:key="pref_xenocanto_quality"
        android:title="@string/xenocanto_quality_setting"
        android:entries="@array/quality"
        android:entryValues="@array/qualityvalues"
        android:summary="@string/xenocanto_quality_summary"
        android:defaultValue="q:A"/>
</PreferenceScreen>