<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.recentbirds.mockingbird.ChoosePlaylistActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_label"
        android:id="@+id/createPlaylistButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlistView"
        android:footerDividersEnabled="true"
        android:choiceMode="singleChoice"
        android:clickable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/choosePlaylistButton"
        android:layout_below="@+id/createPlaylistButton"
        android:background="@android:drawable/editbox_background_normal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        android:id="@+id/choosePlaylistButton"
        android:layout_above="@+id/editPlaylistButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_label"
        android:id="@+id/editPlaylistButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/choosePlaylistButton"
        android:layout_alignEnd="@+id/choosePlaylistButton"
        android:layout_toRightOf="@+id/deletePlaylistButton"
        android:layout_toEndOf="@+id/deletePlaylistButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_label"
        android:id="@+id/deletePlaylistButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/choosePlaylistButton" />

</RelativeLayout>
